# CSupportProject

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/csupportproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/csupportproject/: ApkExtract.java  BsPatch.java  MainActivity.java
app/src/main/java/com/csupportproject/test/: JniClient.java  NdkClient.java  ThirdNdk.java
app/src/main/jni/: Android.mk  Application.mk  com_csupportproject_test_NdkClient.h  com_csupportproject_test_ThirdNdk.h  prevent_debug.c  test.c  testThird.c
app/src/main/jni/bzip2/: bsdiff.c  com_csupportproject_BsPatch.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/csupportproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
