# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html

# Sets the minimum version of CMake required to build the native library.

cmake_minimum_required(VERSION 3.4.1)

# 定义变量ProjectRoot为工程根目录
# set(ProjectRoot G:/Android/AndroidStudioProjects/MyApplication)

# Creates and names a library, sets it as either STATIC
# or SHARED, and provides the relative paths to its source code.
# You can define multiple libraries, and CMake builds them for you.
# Gradle automatically packages shared libraries with your APK.
# native-lib加入到编译源中
add_library( # Sets the name of the library.
             native-lib

             # Sets the library as a shared library.
             SHARED

             # Provides a relative path to your source file(s).
             src/main/cpp/native-lib.cpp )


# 以下是依赖第三方动态库
# 动态方式加载 libtestC.so
# add_library(testC SHARED IMPORTED)
# 设置链接so的路径，${ANDROID_ABI}为so文件的cpu架构类型.会自动更具cpu架构去选择对应的库
# set_target_properties(testC  PROPERTIES IMPORTED_LOCATION ${ProjectRoot}/app/libs/${ANDROID_ABI}/libtestC.so)


# 以下是依赖ndk中的库的写法
# Searches for a specified prebuilt library and stores the path as a
# variable. Because CMake includes system libraries in the search path by
# default, you only need to specify the name of the public NDK library
# you want to add. CMake verifies that the library exists before
# completing its build.
find_library( # Sets the name of the path variable.
              log-lib

              # Specifies the name of the NDK library that
              # you want CMake to locate.
              log )
# Specifies libraries CMake should link to your target library. You
# can link multiple libraries, such as libraries you define in this
# build script, prebuilt third-party libraries, or system libraries.
target_link_libraries( # Specifies the target library.
                       native-lib

                       # Links the target library to the log library
                       # included in the NDK.
                       ${log-lib} )